--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ opencv-python
 scikit-learn
 timm
 huggingface_hub
+hf_transfer
 pytest
 
 # MMRotate Stack (Install order matters generally, use mimicking for pip)
