Implement MVCAViT pipeline and server docs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
-  dataset-prep:
+  train:
     build: .
+    gpus: all
     volumes:
-      - ./data:/app/data
-      - ./datasets:/app/datasets
-      # Mount kaggle.json if it exists locally in root or ~/.kaggle
-      # Users might need to adjust this path or copy kaggle.json to the project root
+      - ./:/workspace
+      - ./datasets:/workspace/datasets
       - ./kaggle.json:/root/.kaggle/kaggle.json
+    working_dir: /workspace
     environment:
       - KAGGLE_CONFIG_DIR=/root/.kaggle
     tty: true
