--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   train:
     build: .
     gpus: all
+    shm_size: "16gb"
+    ipc: host
     volumes:
       - ./:/workspace
       - ./datasets:/workspace/datasets
