--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,13 @@ datasets/raw/
 datasets/deepdrid/
 datasets/eyepacs/
 datasets/fgadr/
-datasets/uwf-700/
+datasets/uwf-700/*
 !datasets/uwf-700/Labels/
 !datasets/uwf-700/Labels/**
+datasets/uwf-700/Labels/Uveitis/symptom_count.csv
 !datasets/uwf-700/variables.csv
 !datasets/uwf-700/visualize_uveitis_boxes.py
+!datasets/uwf-700/visualize_fundus_masks.py
 
 
 # 1) Ignore everything under datasets
@@ -57,3 +59,4 @@ preds_vis/
 preproc/
 pseudo_labels/
 splits/
+models/sam/*.pth
