--- a/configs/stage0_preprocess.yaml
+++ b/configs/stage0_preprocess.yaml
@@ -9,12 +9,39 @@ output:
   preproc_root: preproc
 
 roi:
+  method: threshold
+  method_by_dataset:
+    uwf700: sam_prompted
   downsample_max_side: 768
   sat_threshold: 18
   crop_pad_px: 12
+  sam:
+    checkpoint: models/sam/sam_vit_h_4b8939.pth
+    model_type: vit_h
+    device: cuda
+    fallback_to_threshold: true
+    multimask_output: true
+    points_norm:
+      - [0.50, 0.50, 1]
+      - [0.35, 0.50, 1]
+      - [0.65, 0.50, 1]
+      - [0.50, 0.35, 1]
+      - [0.50, 0.65, 1]
+      - [0.03, 0.03, 0]
+      - [0.97, 0.03, 0]
+      - [0.03, 0.97, 0]
+      - [0.97, 0.97, 0]
+      - [0.50, 0.02, 0]
+      - [0.50, 0.98, 0]
+    open_kernel: 7
+    close_kernel: 19
+    min_area_ratio: 0.10
+    max_area_ratio: 0.98
+    max_border_touch_ratio: 0.55
 
 normalize:
   method: zscore_rgb
+  stats_erode_px: 4
 
 resize:
   global_size: 1024
