--- a/configs/train_uveitis_ft.yaml
+++ b/configs/train_uveitis_ft.yaml
@@ -4,6 +4,8 @@ run:
   output_dir: runs
   name: uveitis_ft
   tensorboard: true
+  save_optimizer: false
+  save_epoch_checkpoints: false
 
 data:
   train_coco: labels_coco/uwf700_train_tiles.json
@@ -12,7 +14,7 @@ data:
 
 model:
   backbone: retfound_vit_l
-  retfound_ckpt: ""
+  retfound_ckpt: models/retfound/RETFound_cfp_weights.pth
   input_size: 768
   fpn_out_channels: 256
   freeze_blocks: 20
@@ -41,3 +43,5 @@ training:
   class_balanced_sampling: true
   eval_iou: 0.3
   fp_image_targets: [0.25, 0.5, 1.0]
+  amp: true
+  amp_dtype: bf16
