--- a/configs/train_uwf_vitl_smoke.yaml
+++ b/configs/train_uwf_vitl_smoke.yaml
@@ -2,7 +2,7 @@ seed: 42
 
 run:
   output_dir: runs
-  name: overfit_10
+  name: uwf_vitl_smoke
   tensorboard: true
   save_optimizer: false
   save_epoch_checkpoints: false
@@ -10,33 +10,30 @@ run:
 data:
   train_coco: labels_coco/uwf700_train_tiles.json
   val_coco: labels_coco/uwf700_val_tiles.json
-  resize: 768
+  resize: 512
 
 model:
   backbone: retfound_vit_l
   retfound_ckpt: models/retfound/RETFound_cfp_weights.pth
-  input_size: 768
+  input_size: 512
   fpn_out_channels: 256
   freeze_blocks: 22
   num_classes: 21
-  rpn_fg_iou_thresh: 0.5
-  rpn_bg_iou_thresh: 0.3
-  roi_fg_iou_thresh: 0.5
-  roi_bg_iou_thresh: 0.5
 
 training:
   device: cuda
-  epochs: 40
+  epochs: 2
   batch_size: 2
   eval_batch_size: 2
-  num_workers: 4
+  num_workers: 2
   lr: 0.00005
   min_lr: 0.000001
   weight_decay: 0.0001
-  freeze_epochs: 20
-  overfit_num_images: 10
+  freeze_epochs: 1
+  overfit_num_images: 16
   class_balanced_sampling: false
   eval_iou: 0.3
-  fp_image_targets: [0.5, 1.0, 2.0]
+  fp_image_targets: [0.5, 1.0]
   amp: true
   amp_dtype: bf16
+
