--- a/configs/train_uveitis_from_fgadr_vitl_1h.yaml
+++ b/configs/train_uveitis_from_fgadr_vitl_1h.yaml
@@ -44,6 +44,7 @@ training:
   freeze_epochs: 6
   class_balanced_sampling: true
   eval_iou: 0.3
+  eval_score_thresh: 0.2
   fp_image_targets: [0.25, 0.5, 1.0]
   amp: true
   amp_dtype: bf16
